--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,5 +9,8 @@
             android:layout_height="wrap_content"
             android:text="Hello World, MyActivity"
             />
+    <WebView android:id="@+id/myWebView"
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent"></WebView>
 </LinearLayout>
 
